@@ -63,6 +63,12 @@ elements of <code>&lt;patternset&gt;</code> directly, as well as
      <code>false</code>|<code>no</code>|<code>off</code>).</td>
     <td valign="top" align="center">No; defaults to true.</td>
   </tr>
+  <tr>
+    <td valign="top">followsymlinks</td>
+    <td valign="top">Shall symbolic links be followed? Defaults to
+      true. See <a href="fileset.html#symlink">fileset's documentation</a>.</td>
+    <td valign="top" align="center">No</td>
+  </tr>
 </table>
 
 <h4>Examples</h4>
