@@ -1,7 +1,7 @@
 /*
  * The Apache Software License, Version 1.1
  *
- * Copyright (c) 2001 The Apache Software Foundation.  All rights
+ * Copyright (c) 2001-2002 The Apache Software Foundation.  All rights
  * reserved.
  *
  * Redistribution and use in source and binary forms, with or without
@@ -54,9 +54,12 @@
 
 package org.apache.tools.ant;
 
+import org.apache.tools.ant.taskdefs.condition.Os;
+
 import junit.framework.TestCase;
 import junit.framework.AssertionFailedError;
 import java.io.File;
+import java.io.IOException;
 
 /**
  * JUnit 3 testcases for org.apache.tools.ant.DirectoryScanner
@@ -66,6 +69,95 @@ import java.io.File;
 public class DirectoryScannerTest extends TestCase {
 
     public DirectoryScannerTest(String name) {super(name);}
+
+
+    // keep track of what operating systems are supported here.
+    private boolean supportsSymlinks = Os.isFamily("unix");
+
+    /**
+     * Test case for setFollowLinks() and associated funtionality.
+     * Only supports test on linux, at the moment because Java has
+     * no real notion of symlinks built in, so an os-specfic call
+     * to Runtime.exec() must be made to create a link to test against.
+     */
+
+    public void testSetFollowLinks() {
+        if (supportsSymlinks) {
+            try {
+                // add conditions and more commands as soon as the need arises
+                String[] command = new String[] {
+                    "ln", "-s", "ant", "src/main/org/apache/tools/ThisIsALink"
+                };
+                try {
+                    Runtime.getRuntime().exec(command);
+                    // give ourselves some time for the system call
+                    // to execute... tweak if you have a really over
+                    // loaded system.
+                    Thread.sleep(1000);    
+                } catch (IOException ioe) {
+                    fail("IOException making link "+ioe);
+                } catch (InterruptedException ie) {
+                }
+                
+                File dir = new File("src/main/org/apache/tools");
+                DirectoryScanner ds = new DirectoryScanner();
+
+                // followLinks should be true by default, but if this ever
+                // changes we will need this line.
+                ds.setFollowSymlinks(true);
+                
+                ds.setBasedir(dir);
+                ds.setExcludes(new String[] {"ant/**"});
+                ds.scan();
+            
+                boolean haveZipPackage = false;
+                boolean haveTaskdefsPackage = false;
+
+                String[] included = ds.getIncludedDirectories();
+                for (int i=0; i<included.length; i++) {
+                    if (included[i].equals("zip")) {
+                        haveZipPackage = true;
+                    } else if (included[i].equals("ThisIsALink"+File.separator+
+                                                  "taskdefs")) {
+                        haveTaskdefsPackage = true;
+                    }
+                }
+
+                // if we followed the symlink we just made we should
+                // bypass the excludes.
+                
+                assertTrue("(1) zip package included", haveZipPackage);
+                assertTrue("(1) taskdefs package included", 
+                           haveTaskdefsPackage);
+
+            
+                ds = new DirectoryScanner();
+                ds.setFollowSymlinks(false);
+                
+                ds.setBasedir(dir);
+                ds.setExcludes(new String[] {"ant/**"});
+                ds.scan();
+            
+                haveZipPackage = false;
+                haveTaskdefsPackage = false;
+                included = ds.getIncludedDirectories();
+                for (int i=0; i<included.length; i++) {
+                    if (included[i].equals("zip")) {
+                        haveZipPackage = true;
+                    } else if (included[i].equals("ThisIsALink"+File.separator+
+                                                  "taskdefs")) {
+                        haveTaskdefsPackage = true;
+                    }
+                }
+                assertTrue("(2) zip package included", haveZipPackage);
+                assertTrue("(2) taskdefs package not included", 
+                           !haveTaskdefsPackage);
+                
+            } finally {
+                (new File("src/main/org/apache/tools/ThisIsALink")).delete();
+            } 
+        }
+    }
 
     /**
      * Test inspired by Bug#1415.
