@@ -36,6 +36,9 @@ Other changes:
 
 * z/OS now gets detected by the os condition.
 
+* <fileset> and <dirset> now have an optional followsymlink attribute
+that can prevent Ant from following symbolic links on some platforms.
+
 Changes from Ant 1.4.1 to 1.5beta1
 ==================================
 
